# libplateau

./: CMakeLists.txt
include/plateau/geometry/: geo_coordinate.h  geo_reference.h  vectors.h
include/plateau/udx/: udx_file_collection.h
src/: CMakeLists.txt
src/c_wrapper/: CMakeLists.txt  geo_reference_c.cpp
src/dataset/: local_dataset_accessor.cpp  server_dataset_accessor.cpp
src/geometry/: geo_coordinate.cpp  geo_reference.cpp  polar_to_plane_cartesian.cpp  polar_to_plane_cartesian.h
src/polygon_mesh/: mesh_extractor.cpp  mesh_merger.cpp  polygon_mesh_utils.cpp
src/udx/: lod_searcher.cpp  mesh_code.cpp  udx_file_collection.cpp
test/: test_grid_merger.cpp
